# CrewAI-Agents

./: .env  .gitignore  README.md  agents.py  crew.py  main.py  pyproject.toml  requirements.txt  tasks.py  tools.py
